--- a/snippets/booking-form.liquid
+++ b/snippets/booking-form.liquid
@@ -36,7 +36,7 @@ BookThatApp 'Form 6 - Start Date and Time/From Date and Time'
 	         data-bta-range-partner-id="#booking-finish-{{ product.handle }}"
 	         data-bta-range-days-max="0" data-bta-range-days-min="0"
 	         data-time=""
-	         placeholder="Select from date..." />
+	         placeholder="Sélectionner date..." />
 	</div>
 
 	<div>
@@ -45,7 +45,7 @@ BookThatApp 'Form 6 - Start Date and Time/From Date and Time'
 	  <select id="{{ attribute }}-{{ product.handle }}" name="properties[{{ attribute }}]"
 	          class="bta-opening-hours bta-load-enable bta-time" disabled="disabled"
 	          data-datepicker="booking-start-{{ product.handle }}"
-	          data-prompt="Select time...">
+	          data-prompt="Sélectionner heure...">
 	    <option class="loading">Loading...</option>
 	  </select>
 	  <span class="bta-no-slots-available" style="display: none;">No times available</span>
@@ -58,7 +58,7 @@ BookThatApp 'Form 6 - Start Date and Time/From Date and Time'
 	         class="datepicker bta required bta-load-enable bta-dp-finish" disabled="disabled"
 	         data-handle="{{ product.handle }}"
 	         data-bta-range-partner-id="#booking-start-{{ product.handle }}"
-	         placeholder="Select to date..." />
+	         placeholder="Sélectionner date..." />
 	</div>
 
 	<div>
@@ -67,7 +67,7 @@ BookThatApp 'Form 6 - Start Date and Time/From Date and Time'
 	  <select id="{{ attribute }}-{{ product.handle }}" name="properties[{{ attribute }}]"
 	         class="bta-opening-hours bta-load-enable bta-time" disabled="disabled"
 	         data-datepicker="booking-finish-{{ product.handle }}"
-	         data-prompt="Select time...">
+	         data-prompt="Sélectionner heure...">
 	    <option class="loading">Loading...</option>
 	  </select>
 	  <span class="bta-no-slots-available" style="display: none;">No times available</span>
