Correction: hidden the variables starting with "_" in cart page

--- a/snippets/framework--cart.liquid
+++ b/snippets/framework--cart.liquid
@@ -78,7 +78,8 @@
                 {% assign property_size = item.properties | size %}
                 {% if property_size > 0 %}
                   {% for property in item.properties %}
-                    {% unless property.last == blank %}
+                    {% assign first_character_in_key = property.first | truncate: 1, '' %}
+                    {% unless property.last == blank or first_character_in_key == '_' %}
                       <br>
                       {{ property.first }}:
                       {% comment %} Check if there was an uploaded file associated {% endcomment %}
