Hide "_" variables in cart also for mobile

--- a/snippets/framework--cart.liquid
+++ b/snippets/framework--cart.liquid
@@ -247,7 +247,8 @@
                 {% if property_size > 0 %}
                   <div class="cart--item-properties">
                   {% for property in item.properties %}
-                    {% unless property.last == blank %}
+                    {% assign first_character_in_key = property.first | truncate: 1, '' %}
+                    {% unless property.last == blank or first_character_in_key == '_' %}
                       <br>
                       {{ property.first }}:
                       {% comment %} Check if there was an uploaded file associated {% endcomment %}
