--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,6 +1,10 @@
 <!doctype html>
 <html class="no-js" lang="{{ shop.locale }}">
   <head>
+<!-- Added by AVADA SEO Suite -->
+{% include 'avada-seo' %}
+<!-- /Added by AVADA SEO Suite -->
+
     <!-- Emerge Theme - Version 3.8.0 by Troop Themes - https://troopthemes.com/ -->
 
     <meta charset="UTF-8">
