--- a/snippets/framework--product--form.liquid
+++ b/snippets/framework--product--form.liquid
@@ -177,6 +177,7 @@
       >
         <button
           class="product-form--add-to-cart"
+          type="submit"
           {%- unless current_variant.available -%}
             disabled
           {%- endunless -%}
