--- a/snippets/custom-styles.liquid
+++ b/snippets/custom-styles.liquid
@@ -30,3 +30,34 @@ text-align : center;
 }
 
 
+.custom_gallery_row_2804 {
+
+  height: 200%;
+  width: 100%;
+
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+
+}
+
+@media only screen and (max-width: 767px) {
+    custom_gallery_row_2804 {
+      display: flex;
+      flex-wrap: wrap;
+      padding: 0 4px;
+    }
+  }
+
+.custom_gallery_col_2804 {
+  flex: 33%;
+  padding: 0 4px;
+}
+
+.custom_gallery_col_2804 img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+
