--- a/snippets/framework--product--form.liquid
+++ b/snippets/framework--product--form.liquid
@@ -138,7 +138,7 @@
           {% endfor %}
         </select>
         
-      {% render 'booking-form' %}
+      {% comment %} {% render 'booking-form' %} {% endcomment %}
 
         <input type="hidden" name="quantity" value="1">
         {% comment %}
