--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="{{ shop.locale }}">
   <head>
+  {% include 'shop-sheriff-amp' %}
 <!-- Added by AVADA SEO Suite -->
 {% include 'avada-seo' %}
 <!-- /Added by AVADA SEO Suite -->
