--- a/snippets/framework--cart.liquid
+++ b/snippets/framework--cart.liquid
@@ -75,6 +75,15 @@
                   </div>
                 {% endif %}
 
+                {% comment %}
+                  custom-add by owner code
+                  {% for property in item.properties %}
+
+                    <h3>Vérification des propriétés de l'item :</h3>
+                    <pre>{{ item.properties | json }}</pre>
+                  {% endfor %}
+                {% endcomment %}
+
                 {% assign property_size = item.properties | size %}
                 {% if property_size > 0 %}
                   {% for property in item.properties %}
