more clear tags

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -93,7 +93,8 @@
     <!-- custom-add by owner -->
     <div id="location-message" style="display: none; padding: 10px; background-color: #f8d7da; color: #721c24; border: 1px solid #f5c6cb; margin: 10px 0;">
     </div>
-    
+    <!-- end custom-add by owner -->
+
     {% unless template contains 'password' %}
       <a data-item="a11y-button" href='#main-content'>
         {{ 'general.skip_link' | t }}
