limit end date=start+2d

--- a/snippets/framework--product--form.liquid
+++ b/snippets/framework--product--form.liquid
@@ -52,10 +52,10 @@
 
       <div class="rental-dates">
         <label for="rental-start-date">Start Date:</label>
-        <input type="text" id="rental-start-date" name="properties[From]" class="datepicker" placeholder="Select start date" />
+        <input type="text" id="rental-start-date" name="properties[From]" placeholder="Select start date" />
 
         <label for="rental-end-date">End Date:</label>
-        <input type="text" id="rental-end-date" name="properties[To]" class="datepicker" placeholder="Select end date" />
+        <input type="text" id="rental-end-date" name="properties[To]" placeholder="Select end date" />
       </div>
 
       {% comment %}
