--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -87,17 +87,6 @@
         </a>
       {% endif %}
 
-      {% comment %} custom-add by owner LOL i'm reusing the contact CSS {% endcomment %}
-      <div id="resetAddressButton" style="display: none;">
-        <a href="#" data-item="secondary-button" onclick="resetAddress(); return false;">
-          <div class="contact-modal--button">
-            Modifier mon adresse
-          </div>
-        </a>
-      </div>
-      
-      {% comment %} end custom-add by owner {% endcomment %}
-
       {% if contact_enabled and contact_text != blank %}
         <div class="header--contact-modal">
           {%
@@ -113,6 +102,17 @@
           %}
         </div>
       {% endif %}
+
+      {% comment %} custom-add by owner LOL i'm reusing the contact CSS {% endcomment %}
+      <div id="resetAddressButton" style="display: none;">
+        <a href="#" data-item="secondary-button" onclick="resetAddress(); return false;">
+          <div class="contact-modal--button">
+            Mon addresse
+          </div>
+        </a>
+      </div>
+
+      {% comment %} end custom-add by owner {% endcomment %}
 
       <div class="header--cart" data-item="button">
         <div class="header--cart-button">
@@ -187,6 +187,17 @@
   .fw--logo img {
     max-height: {{ height_range }}px;
   }
+
+  {% comment %} custom-add by owner {% endcomment %}
+  #resetAddressButton .contact-modal--button {
+    {% comment %} display: block;        /* Chaque bouton sur sa propre ligne */ {% endcomment %}
+    {% comment %} width: auto; {% endcomment %}
+    {% comment %} margin: 0 auto 8px;    /* marge en bas pour séparer du bouton Contact */ {% endcomment %}
+    font-size: 0.65rem;    /* plus petit texte */
+    {% comment %} padding: 0.4rem 0.8rem; {% endcomment %}
+  }
+    {% comment %} end custom-add by owner {% endcomment %}
+
 </style>
 
 {% schema %}
