dont call myself owner

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -63,7 +63,7 @@
     <style>
       {% render 'custom-styles' %}
 
-      {% comment %} custom-add by owner {% endcomment %}
+      {% comment %} custom-add {% endcomment %}
 
       .custom-button {
         background-color: #212121 !important; 
