--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -103,7 +103,7 @@
         </div>
       {% endif %}
 
-      {% comment %} custom-add by owner LOL i'm reusing the contact CSS {% endcomment %}
+      {% comment %} custom-add LOL i'm reusing the contact CSS {% endcomment %}
       <div id="resetAddressButton" style="display: none;">
         <a href="#" class="contact-modal--button" onclick="resetAddress(); return false;">
           MON ADDRESSE
@@ -111,7 +111,7 @@
       </div>
       
 
-      {% comment %} end custom-add by owner {% endcomment %}
+      {% comment %} end custom-add {% endcomment %}
 
       <div class="header--cart" data-item="button">
         <div class="header--cart-button">
@@ -187,7 +187,7 @@
     max-height: {{ height_range }}px;
   }
 
-  {% comment %} custom-add by owner {% endcomment %}
+  {% comment %} custom-add {% endcomment %}
 
   #resetAddressButton .contact-modal--button {
     text-align: center;
@@ -210,7 +210,7 @@
       padding: 0 16px; /* ✅ Ajuste les marges intérieures */
   }
   
-  {% comment %} end custom-add by owner {% endcomment %}
+  {% comment %} end custom-add {% endcomment %}
 
 </style>
 
