--- a/snippets/framework--cart.liquid
+++ b/snippets/framework--cart.liquid
@@ -76,7 +76,7 @@
                 {% endif %}
 
                 {% comment %}
-                  custom-add by owner code
+                  custom-add
                   {% for property in item.properties %}
 
                     <h3>Vérification des propriétés de l'item :</h3>
@@ -433,7 +433,7 @@
             <a href="/checkout?discount=ACOMPTE20" class="pay-deposit-button">
               Payer un acompte de 20%
             </a>
-            {% comment %} end custom-add by user {% endcomment %}
+            {% comment %} end custom-add {% endcomment %}
 
             {% comment %} 
               custom-add
