--- a/snippets/framework--product--form.liquid
+++ b/snippets/framework--product--form.liquid
@@ -47,7 +47,7 @@
     {% form 'product', product, class: 'product-form--container' %}
       
       {% comment %}
-        custom-add by owner code
+        custom-add
       {% endcomment %}
 
       <div class="rental-dates">
@@ -59,7 +59,7 @@
       </div>
 
       {% comment %}
-        end custom-add by owner code
+        end custom-add
       {% endcomment %}
       
       <div class="product-form--price-container">
