--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -101,7 +101,7 @@
   <!--[if (gt IE 9)|!(IE)]><!--><script src="//cdn.bookthatapp.com/fullcalendar2/lib/moment.min.js" defer="defer"></script><!--<![endif]-->
   <!--[if lte IE 9]><script src="//cdn.bookthatapp.com/fullcalendar2/lib/moment.min.js"></script><![endif]-->
 
-    <script src="{{ 'owner_custom.js' | asset_url }}" defer="defer"></script>
+    <script src="{{ 'custom.js' | asset_url }}" defer="defer"></script>
 
     {% if template contains 'customers' %}
       <script src="{{ 'shopify_common.js' | shopify_asset_url }}" defer="defer"></script>
