--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -75,8 +75,8 @@
         text-transform: uppercase;
         font-size: 14px;
         letter-spacing: 1px;
-        height: 45px;
-        line-height: 45px;
+        height: 25px;
+        line-height: 25px;
         padding: 0 16px;
         border: none;
         cursor: pointer;
@@ -155,7 +155,7 @@
       <input
         type="text"
         id="addressInput"
-        placeholder="Ex. : 10 rue de Rivoli, Paris"
+        placeholder="Ex. : Paris"
         style="
           width: 100%;
           padding: 12px;
@@ -183,14 +183,6 @@
 
       <!-- Boutons -->
       <div style="margin-top: 15px; text-align: center;">
-        <button
-          data-item="button"
-          onclick="closeModal()"
-          class="custom-button"
-        >
-          OK
-        </button>
-
         <button
           data-item="button"
           onclick="useGeolocation()"
