--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -148,9 +148,16 @@
 
       <div id="modalMessages"></div>
 
-      <h3 style="margin-top: 0;">
+      <div style="
+        margin-top: 0;
+        text-align: center;
+        font-size: 1.1em;
+        line-height: 1.6;
+        padding: 10px;
+        border-radius: 8px;
+      ">
         🌍 Nous avons besoin de connaître la commune dans laquelle vous voulez effectuer votre livraison 🌍
-      </h3>
+      </div>
 
       <input
         type="text"
