--- a/snippets/framework--product--form.liquid
+++ b/snippets/framework--product--form.liquid
@@ -51,11 +51,11 @@
       {% endcomment %}
 
       <div class="rental-dates">
-        <label for="rental-start-date">Start Date:</label>
-        <input type="text" id="rental-start-date" name="properties[From]" placeholder="Select start date" />
+        <label for="rental-start-date">Début:</label>
+        <input type="text" id="rental-start-date" name="properties[From]" placeholder="Date de début" />
 
-        <label for="rental-end-date">End Date:</label>
-        <input type="text" id="rental-end-date" name="properties[To]" placeholder="Select end date" />
+        <label for="rental-end-date">Fin:</label>
+        <input type="text" id="rental-end-date" name="properties[To]" placeholder="Date de fin" />
       </div>
 
       {% comment %}
