--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -98,6 +98,8 @@
     <script src="{{ 'lazysizes.min.js' | asset_url }}" async="async"></script>
     <script src="{{ 'theme.min.js' | asset_url }}" defer="defer"></script>
 
+    <script src="{{ 'myDatePicker.js' | asset_url }}" defer="defer"></script>
+
     {% if template contains 'product' %}
       <script src="{{ 'check_availability.js' | asset_url }}" defer="defer"></script>
     {% endif %}
