--- a/snippets/framework--product--form.liquid
+++ b/snippets/framework--product--form.liquid
@@ -52,10 +52,10 @@
 
       <div class="rental-dates">
         <label for="rental-start-date">Début:</label>
-        <input type="text" id="rental-start-date" name="properties[From]" placeholder="Date de début" />
+        <input type="text" id="rental-start-date" name="properties[From]" placeholder="Date de début" class="datepicker"/>
 
         <label for="rental-end-date">Fin:</label>
-        <input type="text" id="rental-end-date" name="properties[To]" placeholder="Date de fin" />
+        <input type="text" id="rental-end-date" name="properties[To]" placeholder="Date de fin" class="datepicker"/>
       </div>
 
       {% comment %}
