--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -98,7 +98,7 @@
     <script src="{{ 'lazysizes.min.js' | asset_url }}" async="async"></script>
     <script src="{{ 'theme.min.js' | asset_url }}" defer="defer"></script>
 
-    <script src="{{ 'myDatePicker.js' | asset_url }}" defer="defer"></script>
+    <script src="{{ 'my-date-picker.js' | asset_url }}" defer="defer"></script>
 
     {% if template contains 'product' %}
       <script src="{{ 'check_availability.js' | asset_url }}" defer="defer"></script>
@@ -110,7 +110,7 @@
   <!--[if (gt IE 9)|!(IE)]><!--><script src="//cdn.bookthatapp.com/fullcalendar2/lib/moment.min.js" defer="defer"></script><!--<![endif]-->
   <!--[if lte IE 9]><script src="//cdn.bookthatapp.com/fullcalendar2/lib/moment.min.js"></script><![endif]-->
 
-    <script src="{{ 'custom.js' | asset_url }}" defer="defer"></script>
+    <script src="{{ 'my-address.js' | asset_url }}" defer="defer"></script>
 
     {% if template contains 'customers' %}
       <script src="{{ 'shopify_common.js' | shopify_asset_url }}" defer="defer"></script>
