--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -101,7 +101,7 @@
     <script src="{{ 'my-date-picker.js' | asset_url }}" defer="defer"></script>
 
     {% if template contains 'product' %}
-      <script src="{{ 'check_availability.js' | asset_url }}" defer="defer"></script>
+      <script src="{{ 'check-availability.js' | asset_url }}" defer="defer"></script>
     {% endif %}
 
      {{ '//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css' | stylesheet_tag }}
