--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -106,7 +106,7 @@
       {% comment %} custom-add LOL i'm reusing the contact CSS {% endcomment %}
       <div id="resetAddressButton" style="display: none;">
         <a href="#" class="contact-modal--button" onclick="resetAddress(); return false;">
-          MON ADDRESSE
+          MON ADRESSE
         </a>
       </div>
       
